UI/UX Improvements - Help text for scope formating with link - Table rows no longer wordwrap but are scrollable - Pages table header is sticky and stays on top

--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -69,6 +69,15 @@ table {
     table-layout: fixed;
     border-collapse: collapse;
     width: 100%;
+    white-space: nowrap;
+}
+
+thead {
+    position: sticky;
+	position: -webkit-sticky;
+	top: 0px;
+	z-index: 2;
+    background-color: var(--sl-color-neutral-0);
 }
 
 th {
